updated: jquery complete, game works

--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
     </div>
 
     <div class="crystals">
-      <img src="" class="btn" id="green-crystal" alt="Green Crystal">
-      <img src="" class="btn" id="blue-crystal" alt="Blue Crystal">
-      <img src="" class="btn" id="yellow-crystal" alt="Yellow Crystal">
-      <img src="" class="btn" id="red-crystal" alt="Red Crystal">
+      <img src="" class="btn" id="btn1" alt="Green Crystal">
+      <img src="" class="btn" id="btn2" alt="Blue Crystal">
+      <img src="" class="btn" id="btn3" alt="Yellow Crystal">
+      <img src="" class="btn" id="btn4" alt="Red Crystal">
     </div>
     
     <div class="point-wrapper">
       <div class="game-total">
         <h2>
-          Number To Reach: <span id="random-number"></span>
+          Game Total: <span id="random-number"></span>
         </h2>
       </div>
 
       <div class="player-total">
         <h2>
-          Current Total: <span id="total-score"></span>
+          Your Total: <span id="score-counter"></span>
         </h2>
       </div>
     </div>
