updated: final version w/ styling and imgs

--- a/index.html
+++ b/index.html
@@ -12,25 +12,33 @@
 </head>
 <body>
 
+  <div class="scoreboard">
+    <h2>
+      Wins: <span id="number-of-wins"></span>
+      <br>
+      Losses: <span id="number-of-losses"></span>
+    </h2>
+  </div>
+
   <div class="flexbox">
 
     <div class="header">
       <h1>Crystal Collector</h1>
     </div>
 
-    <div class="scoreboard">
-      <h2>
-        Wins: <span id="number-of-wins"></span>
-        <br>
-        Losses: <span id="number-of-losses"></span>
-      </h2>
-    </div>
-
-    <div class="crystals">
-      <img src="" class="btn" id="btn1" alt="Green Crystal">
-      <img src="" class="btn" id="btn2" alt="Blue Crystal">
-      <img src="" class="btn" id="btn3" alt="Yellow Crystal">
-      <img src="" class="btn" id="btn4" alt="Red Crystal">
+    <div class="crystal-container">
+      <div class="crystals">
+        <img src="./assets/images/green-gem.PNG" id="btn1" alt="Green Crystal">
+      </div>
+      <div class="crystals">
+        <img src="./assets/images/blue-gem.PNG" id="btn2" alt="Blue Crystal">
+      </div>
+      <div class="crystals">
+        <img src="./assets/images/yellow-gem.PNG" id="btn3" alt="Yellow Crystal">
+      </div>
+      <div class="crystals">
+        <img src="./assets/images/red-gem.PNG" id="btn4" alt="Red Crystal">
+      </div>
     </div>
     
     <div class="point-wrapper">
