fixed: small bugs

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       <h1>Crystal Collector</h1>
     </div>
 
+    <div class="instructions">
+      <p>Click on any crystal to begin!</p>
+    </div>
+
     <div class="crystal-container">
       <div class="crystals">
         <img src="./assets/images/green-gem.PNG" id="btn1" alt="Green Crystal">
